docker-k8s-workshop/day3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-clusterip
spec:
  selector:
    app: hello-world-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-nodeport
spec:
  selector:
    app: hello-world-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30036
  type: NodePort
